Update Go version and add _redirects file

--- a/fe-jeopardy/angular.json
+++ b/fe-jeopardy/angular.json
@@ -25,7 +25,12 @@
             "inlineStyleLanguage": "less",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+              }
             ],
             "styles": [
               "src/styles.less"
