--- a/fe-jeopardy/package.json
+++ b/fe-jeopardy/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^17.3.1",
     "@angular/router": "^17.3.1",
     "@supabase/supabase-js": "^2.39.8",
+    "@types/uuid": "^9.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
