--- a/fe-jeopardy/angular.json
+++ b/fe-jeopardy/angular.json
@@ -32,9 +32,7 @@
                 "output": "/"
               }
             ],
-            "styles": [
-              "src/styles.less"
-            ],
+            "styles": ["src/styles.less"],
             "scripts": []
           },
           "configurations": {
@@ -74,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "jeopardy:build:production"
+              "buildTarget": "jeopardy:build:production"
             },
             "development": {
-              "browserTarget": "jeopardy:build:development"
+              "buildTarget": "jeopardy:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -85,7 +83,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "jeopardy:build"
+            "buildTarget": "jeopardy:build"
           }
         },
         "test": {
@@ -96,13 +94,8 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "less",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.less"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.less"],
             "scripts": []
           }
         }
