override @supabase/auth-js dependency from v2.64.2 to v2.61.0 to resolve https://github.com/supabase/supabase-js/issues/936

--- a/fe-jeopardy/package.json
+++ b/fe-jeopardy/package.json
@@ -40,7 +40,7 @@
   },
   "overrides": {
     "@supabase/supabase-js": {
-      "@supabase/gotrue-js": "2.61.0"
+      "@supabase/auth-js": "2.61.0"
     }
   }
 }
