--- a/be-jeopardy/docker-compose.yml
+++ b/be-jeopardy/docker-compose.yml
@@ -5,10 +5,10 @@ services:
   postgres:
     image: postgres:buster
     hostname: postgres
-    container_name: postgres
+    container_name: jeopardy_postgres
     restart: always
     ports:
-      - "5432:5432"
+      - "5434:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
